refactor: .js → .ts 변환 및 타입 오류 무시 처리 학습
- 기존 JavaScript 파일들을 TypeScript(.ts)로 변환
- tsconfig.json 설정 변경:
  - "checkJs": false → JS 타입 검사 비활성화
  - "allowJs": true → JS 파일 허용
  - "noEmitOnError": false → 타입 오류 발생 시에도 컴파일 결과 생성 허용
- 일부 의존성이 타입 정보를 제공하지 않아 발생하는 오류를 @ts-expect-error 등으로 무시하는 방법 학습 및 적용
- 1-4_1.ts, 1-4_2.ts 파일을 추가하여 any 타입 및 오류 무시 처리 실습 코드 작성

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
-    "checkJs": true, // 편집기가 src 폴더의 모든 js 파일을 읽어 실시간으로 형식 오류 피드백을 제공한다.
-    "noEmit": true, // ts가 js 파일을 예전 버전으로 변환하지 않게 한다.
+    "checkJs": false, 
+    "allowJs": true, 
+    "noEmitOnError": false,
 
     // File Layout
     "rootDir": "./src",
