--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "typescript_cookbook",
   "version": "1.0.0",
-  "main": "hello.js",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./esm/index.js",
+      "require": "./commonJS/index.cjs"
+    }
+  },
+  "main": "./commonjs/index.cjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
