--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,9 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "skipLibCheck": true,
+    "skipLibCheck": true, // node_modules 내부 타입 정의(.d.ts) 검사를 건너뛰어 외부 라이브러리 타입 오류를 무시함
     "target": "esnext",
-    "module": "esnext",
+    "module": "NodeNext",
     "paths": {
       "https://esm.sh/lodash@4.17.21": [
         "./node_modules/@types/lodash/index.d.ts"
