--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "undici-types": "^7.16.0"
   },
   "dependencies": {
+    "deno": "^2.5.6",
     "express": "^5.1.0",
     "react": "^19.2.0"
   }
