chore: tsconfig/bases의 미리 정의된 설정을 적용하여 TypeScript 환경 개선
- 문제 해결
  ▷ 특정 플랫폼(Node.js, 브라우저 등)에 TypeScript를 적용할 때
    어떤 옵션으로 시작해야 하는지 불명확했던 초기 설정 문제 해결

- 주요 변경 사항
  • 커뮤니티가 관리하는 tsconfig/bases 패키지 도입
    ‣ Definitely Typed 와 유사하게 권장 TypeScript 설정을 호스팅하는 패키지 활용
  • Node.js 18 환경 + 엄격 모드 + ECMAScript 모듈 구성을 위해
    ‣ @tsconfig/node18-strictest-esm 패키지 설치
    ‣ tsconfig.json 에 "extends": "@tsconfig/node18-strictest-esm/tsconfig.json" 추가

- 결과
  ▷ 검증된 커뮤니티 권장 설정을 기반으로 안정적이고 일관된 TypeScript 환경 구성
  ▷ 플랫폼별 초기 설정 부담 감소 및 엄격한 타입 검증 활성화

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@tsconfig/node18-strictest-esm": "^1.0.1",
     "@types/express": "^5.0.5",
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.20",
