feat: 형식 추론과 애너테이션 사용 기준을 정리하는 예제 추가
- 문제 인식
  ▷ 타입 애너테이션을 모든 곳에 붙이는 것은 귀찮고 불필요한 오버헤드를 만든다는 점 정리
  ▷ 형식 검사가 진짜로 필요한 지점을 선별하는 기준이 필요함

- 주요 내용 및 코드 추가
  • primitive_type.ts 예제 추가
    ‣ let aNumber = 2; 를 통해 기본적인 형식 추론 동작 확인
    ‣ let anotherNumber: number = 3; 으로 명시적 애너테이션과 비교
  • Person, User 타입 정의
    ‣ 공통 필드(name, age)를 가지되 User 에 id 필드를 추가하여 호환성 차이 표현
  • 함수 단위 애너테이션 활용
    ‣ createPerson(): Person 에서 반환 형식을 애너테이션하고 호출부에서는 추론을 활용
    ‣ printPerson(person: Person) 처럼 함수 매개변수에만 애너테이션을 두어 형식 검사 포인트를 명확히 함
  • 호환 가능한 객체와 리터럴 전달 비교
    ‣ me, user 를 printPerson 에 전달할 때는 정상 동작
    ‣ 리터럴에 id 프로퍼티를 추가하면 Person 형식에 없는 속성으로 인해 오류가 발생하는 예시 추가

- 결과
  ▷ “형식 추론을 믿고, 꼭 필요한 곳(특히 함수 파라미터)에만 애너테이션을 추가하자”는 원칙을 코드로 문서화
  ▷ 불필요한 타입 선언을 줄이면서도 안전한 타입 검사를 유지하는 방법을 실습으로 확인

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typescript_cookbook",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "exports": {
     ".": {
       "import": "./esm/index.js",
