feat: any와 unknown 활용 예제 추가 및 타입 안전성 비교 정리
- 문제 인식
  ▷ any와 unknown 중 어떤 상황에 어떤 타입을 사용해야 하는지 기준이 모호했던 점을 해결
  ▷ 타입 검사를 끄고 싶은 경우 vs 안전한 전달만 필요한 경우의 차이를 명확히 문서화

- 주요 코드 및 개념 추가
  • any 활용 예제 작성
    ‣ 마이그레이션·서드파티 의존성·JS 프로토타이핑 등 any가 유용함
    ‣ noImplicitAny 활성화 후 명시적으로 any를 사용하는 방식 정리
    ‣ any가 타입 시스템을 우회하기 때문에 발생할 수 있는 암묵적 위험성 예시 포함
  • unknown 활용 예제 작성
    ‣ unknown은 모든 값을 담을 수 있지만 사용 전에 반드시 타입 검증이 필요함을 실습
    ‣ typeof 체크를 통한 제어 흐름 기반 타입 좁히기 예제(doSomething) 추가
    ‣ 사전 검사 없이 string, number 등에 할당할 수 없어 안전성이 높다는 점 강조
  • Person 타입을 기반으로 한 printPerson, printPerson2, printPerson3 비교
    ‣ any 사용 시 타입 검사 중단
    ‣ keyof Person 활용으로 타입 안전성을 유지하는 방식 적용

- 결과
  ▷ any와 unknown의 차이, 사용 시점, 위험성과 장점 등을 코드로 명확히 구분
  ▷ 타입 안전성을 유지하면서 유연성을 확보하는 실전 패턴을 정리한 예제 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,19 @@
-// tsconfig.json
 {
-  "extends": "./tsconfig.base.json",
+  "extends": "@tsconfig/strictest/tsconfig.json",
   "compilerOptions": {
-    "skipLibCheck": true, // node_modules 내부 타입 정의(.d.ts) 검사를 건너뛰어 외부 라이브러리 타입 오류를 무시함
+    "skipLibCheck": true,
     "target": "esnext",
     "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "verbatimModuleSyntax": true,
+    "noImplicitAny": true,
     "paths": {
       "https://esm.sh/lodash@4.17.21": [
         "./node_modules/@types/lodash/index.d.ts"
       ]
     },
-    "types": [
-      "node",
-      "mocha"
-    ],
-    "rootDirs": [
-      "test",
-      "src"
-    ]
-  }
+    "types": ["node", "mocha"],
+    "rootDirs": ["test", "src"]
+  },
+  "exclude": ["dist", "node_modules"]
 }
