--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typescript_cookbook",
   "version": "1.0.0",
-  "type": "commonjs",
+  "type": "module",
   "exports": {
     ".": {
       "import": "./esm/index.js",
@@ -18,7 +18,6 @@
   "description": "",
   "devDependencies": {
     "@tsconfig/node18-strictest-esm": "^1.0.1",
-    "@tsconfig/strictest": "^2.0.8",
     "@types/express": "^5.0.5",
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.20",
