--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "undici-types": "^7.16.0"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "deno": "^2.5.6",
     "express": "^5.1.0",
     "react": "^19.2.0"
