feat(type-system): 선택형 프로퍼티와 undefined를 구별하도록 exactOptionalPropertyTypes 적용
◎ 문제
  ● 타입스크립트에서 선택형 프로퍼티는  실제 JS 동작과 다르게 항상 `| undefined`가 포함된 것으로 취급됨
  ● 따라서 “프로퍼티가 없음(missing)”과 “값이 undefined로 명시됨”을 타입 수준에서 구별하기 어려운 문제 발생
  ● strictNullChecks가 true일 때도 이 불일치는 유지됨

◎ 해결
  ● tsconfig에서 `exactOptionalPropertyTypes: true` 활성화
    ▹ 선택형 프로퍼티를 “없는 상태”와 “undefined로 설정하는 것”을 명확히 구분
    ▹ 선택형 프로퍼티에 undefined를 명시적으로 설정하는 코드는 오류 처리

◎ 구현 내용
  ● Settings 타입
    ▹ theme?: "dracula" | "monokai" | "github"
    ▹ optional 필드는 존재하지 않을 수도 있지만,
      exactOptionalPropertyTypes 설정 전에는 `undefined`도 허용됨
  ● getTheme / getTheme2
    ▹ `theme` 속성이 없는 경우와 undefined인 경우의 차이 확인
    ▹ null 병합 연산자(??)로 기본값 처리 가능
  ● exactOptionalPropertyTypes 적용 후
    ▹ `{ theme: undefined }` 는 Settings에 할당 불가
    ▹ 선택형 프로퍼티에 undefined를 명시하는 것은 잘못된 상태라는 점을
       타입 시스템이 정확하게 감지

◎ 효과
  ● 실제 JS 객체 모델과 타입스크립트 모델 간의 의미적 차이를 제거
  ● “프로퍼티 미존재”와 “undefined 값 지정”을 타입 단에서 구분하여 더 견고한 API 설계 가능
  ● 런타임 오류 대신 컴파일 단계에서 구조적 결함을 조기 발견

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/strictest/tsconfig.json",
   "compilerOptions": {
+    "strictNullChecks": true,
     "skipLibCheck": true,
     "target": "esnext",
     "module": "NodeNext",
